Updated config for elastic.cbse.cloud

--- a/oci/instance-20210605-0956/nginx.conf
+++ b/oci/instance-20210605-0956/nginx.conf
@@ -35,23 +35,7 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-    server {
-        listen       80;
-        listen       [::]:80;
-        server_name  _;
-        root         /usr/share/nginx/html;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
-
-        error_page 404 /404.html;
-        location = /404.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
-    }
 
 # Settings for a TLS enabled server.
 #
@@ -81,13 +65,20 @@ http {
 #    }
 
 
+  upstream elasticServer {
+    server 10.0.0.99:9200;
+  }
 
-    upstream vaultServer {
-      server localhost:8200;
-    }
+  upstream vaultServer {
+    server localhost:8200;
+  }
 
-    server {
-      server_name vault.server.io;
+  upstream kibanaServer {
+    server 10.0.0.99:5601;
+  }
+
+  server {
+      server_name vault.vadlakonda.in;
       location / {
         proxy_pass http://vaultServer;
         proxy_set_header X-Real-IP  $remote_addr;
@@ -96,27 +87,130 @@ http {
         proxy_intercept_errors on;
 
       }
-    
+
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/vault.server.io/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/vault.server.io/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.vadlakonda.in/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.vadlakonda.in/privkey.pem;#  managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf;#  managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+  }
+  server {
+
+    server_name kibana.vadlakonda.in;
+    
+    location / {
+        proxy_pass http://kibanaServer;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        proxy_intercept_errors on;
+
+    }
+    
+
+  
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.vadlakonda.in/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.vadlakonda.in/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-}
+  }
 
+  server {
 
+    server_name elastic.vadlakonda.in;
+    
+    location / {
+        proxy_pass https://elasticServer;
 
-    server {
-        if ($host = vault.server.io) {
-            return 301 https://$host$request_uri;
-        } # managed by Certbot
-
-
-        listen 80;
-        server_name vault.server.io;
-        return 404; # managed by Certbot
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        proxy_intercept_errors on;
 
 
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.vadlakonda.in/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.vadlakonda.in/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+  }  
+
+
+  server {
+
+    server_name elastic.cbse.cloud;
+    
+    location / {
+        proxy_pass https://elasticServer;
+
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        proxy_intercept_errors on;
+
+
+    }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.cbse.cloud/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.cbse.cloud/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+  
+}  
+
+  server {
+    if ($host = vault.vadlakonda.in) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name vault.vadlakonda.in;
+    return 404; # managed by Certbot
+  }
+
+  server {
+    if ($host = kibana.vadlakonda.in) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name kibana.vadlakonda.in;
+    return 404; # managed by Certbot
+  }
+
+  server {
+    if ($host = elastic.vadlakonda.in) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name elastic.vadlakonda.in;
+    return 404; # managed by Certbot
+  }
+
+  server {
+    if ($host = elastic.cbse.cloud) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name elastic.cbse.cloud;
+    return 404; # managed by Certbot
+  }
 }
+
