--- a/oci/instance-20210605-0956/nginx.conf
+++ b/oci/instance-20210605-0956/nginx.conf
@@ -155,7 +155,9 @@ http {
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
         proxy_intercept_errors on;
-
+        add_header 'Access-Control-Allow-Origin' '*';
+        #add_header 'Access-Control-Allow-Origin' 'cbse.cloud';
+        add_header 'Access-Control-Allow-Headers' '*';
 
     }
 
