--- a/oci/instance-20210605-0956/nginx.conf
+++ b/oci/instance-20210605-0956/nginx.conf
@@ -35,7 +35,7 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-
+    client_max_body_size 25M;
 
 # Settings for a TLS enabled server.
 #
@@ -73,6 +73,11 @@ http {
     server localhost:8200;
   }
 
+  upstream loopbackServer {
+    server 10.0.0.99:3001;
+  }
+
+
   upstream kibanaServer {
     server 10.0.0.99:5601;
   }
@@ -94,7 +99,10 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf;#  managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-  }
+  
+
+
+}
   server {
 
     server_name kibana.vadlakonda.in;
@@ -117,7 +125,39 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-  }
+  
+
+
+}
+
+  server {
+
+    server_name loopback.cbse.cloud;
+
+    location / {
+        proxy_pass http://loopbackServer;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+        proxy_intercept_errors on;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Headers' '*';
+    }
+
+
+
+
+
+
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.vadlakonda.in/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.vadlakonda.in/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
 
   server {
 
@@ -141,7 +181,10 @@ http {
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-  }  
+  
+
+
+}  
 
 
   server {
@@ -155,18 +198,22 @@ http {
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
         proxy_intercept_errors on;
-
-
+        add_header 'Access-Control-Allow-Origin' '*';
+	      #add_header 'Access-Control-Allow-Origin' 'cbse.cloud';
+        add_header 'Access-Control-Allow-Headers' '*';
     }
 
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/elastic.cbse.cloud/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/elastic.cbse.cloud/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/elastic.vadlakonda.in/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/elastic.vadlakonda.in/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
   
+
+
+
 }  
 
   server {
@@ -212,5 +259,19 @@ http {
     server_name elastic.cbse.cloud;
     return 404; # managed by Certbot
   }
-}
+
+
+  server {
+    if ($host = loopback.cbse.cloud) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+
+    server_name loopback.cbse.cloud;
+    listen 80;
+    return 404; # managed by Certbot
+
+
+}}
 
